# elementor2gads

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
data/: README.md
docs/: google-customer-match.md  postcode-data.md  privacy-and-compliance.md
elementor2gads/: __init__.py  __main__.py  cli.py  convert.py  postcode.py  postcode_data.py
examples/: sample_input.csv  sample_output.csv
scripts/: release_check.py
tests/: test_cli.py  test_convert.py  test_postcode.py  test_postcode_data.py
